Source/WebKit/UIProcess/ResponsivenessTimer.cpp
@@ -32,27 +32,32 @@ static const Seconds responsivenessTimeout { 3_s };
 
 ResponsivenessTimer::ResponsivenessTimer(ResponsivenessTimer::Client& client)
     : m_client(client)
-    , m_isResponsive(true)
-    , m_timer(RunLoop::main(), this, &ResponsivenessTimer::timerFired)
+    , m_timer(*this, &ResponsivenessTimer::timerFired)
 {
 }
 
-ResponsivenessTimer::~ResponsivenessTimer()
-{
-    m_timer.stop();
-}
+ResponsivenessTimer::~ResponsivenessTimer() = default;
 
 void ResponsivenessTimer::invalidate()
 {
+    m_waitingForTimer = false;
+    m_useLazyStop = false;
     m_timer.stop();
 }
 
 void ResponsivenessTimer::timerFired()
 {
+    if (!m_waitingForTimer)
+        return;
+
+    m_waitingForTimer = false;
+    m_useLazyStop = false;
+
     if (!m_isResponsive)
         return;
 
     if (!m_client.mayBecomeUnresponsive()) {
+        m_waitingForTimer = true;
         m_timer.startOneShot(responsivenessTimeout);
         return;
     }
@@ -66,10 +71,20 @@ void ResponsivenessTimer::timerFired()
     
 void ResponsivenessTimer::start()
 {
-    if (m_timer.isActive())
+    if (m_waitingForTimer)
         return;
 
+    m_waitingForTimer = true;
+    m_useLazyStop = false;
     m_timer.startOneShot(responsivenessTimeout);
+}
+
+void ResponsivenessTimer::startWithLazyStop()
+{
+    if (!m_waitingForTimer) {
+        start();
+        m_useLazyStop = true;
+    }
 }
 
 void ResponsivenessTimer::stop()
@@ -83,13 +98,19 @@ void ResponsivenessTimer::stop()
         m_client.didBecomeResponsive();
     }
 
-    m_timer.stop();
+    m_waitingForTimer = false;
+
+    if (m_useLazyStop)
+        m_useLazyStop = false;
+    else
+        m_timer.stop();
 }
 
 void ResponsivenessTimer::processTerminated()
 {
     // Since there is no web process, we must not be waiting for it anymore.
-    stop();
+    m_waitingForTimer = false;
+    m_timer.stop();
 }
 
 } // namespace WebKit
